# spectroscopy-tetracorder

./: .gitignore  pyproject.toml
container/: Dockerfile  README.md
cuprite95/example-01/: run.sh
cuprite95/test5.26e1/AAA.info/: material-DN-scalling.txt
tetracorderpy/: __init__.py  __main__.py  core.py
