[project]
name = "spectroscopy-tetracorder"
version = "0.1.0"
description = "Python wrapper for USGS Tetracorder spectral analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tetracorderpy"]

[project.scripts]
tetracorderpy = "tetracorderpy.__main__:main"
